# proof-generator

./: .gitignore  .prettierignore  Cargo.toml  Makefile  README.md  a.json  format.js  install.sh  pnpm-lock.yaml  process_json.js
.github/workflows/: pull-request.yml  tests.yml
examples/: cpu_air_params.json  dummy_snos_compiled.json  dummy_snos_private_input.json  dummy_snos_proof.json  dummy_snos_public_input.json
examples/dummy_snos/: dummy_snos.cairo  dummy_snos_cpu_air_params.json
examples/dummy_snos/output/: dummy_snos_compiled.json  dummy_snos_private_input.json  dummy_snos_public_input.json
examples/fibonacci/: fibonacci_cpu_air_params.json  fibonacci_cpu_air_prover_config.json
src/: main.rs
