[package]
name = "proof-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
cairo-bootloader = { git = "https://github.com/Moonsong-Labs/cairo-bootloader.git", version = "0.1.0" }
cairo-vm = { git = "https://github.com/lambdaclass/cairo-vm", rev = "05352b1c67859a4d8cd128575c1e68ca7e300341", features = ["extensive_hints"] }
bincode = { version = "2.0.0-rc.3", default-features = false, features = [
    "serde",
] }
clap = { version = "4.5.17", features = ["derive"] }
